crates/atlas-runtime/tests/corpus/fail/modules/unknown_export/math.atl
// math.atlas - only exports 'add'
export fn add(a: number, b: number) -> number {
    return a + b;
}
